<resources>
    <string name="app_name">BookSpace</string>
    <string name="textViewAvatar">Choose new user photo</string>
    <string name="buttonUploadPhoto">Browser...</string>
    <string name="buttonChangeAvatar">Save</string>
    <string name="aboutButton">About</string>
    <string name="reviewsButton">Reviews</string>
    <string name="noticeButton">Notice</string>
    <string name="navRead">Read Books</string>
    <string name="navReading">Reading Books</string>
    <string name="navWillRead">Will Read Books</string>
    <string name="navAccountSet">Account settings</string>
    <string name="navStatistics">Statistics</string>
    <string name="navHomeTitle">Home</string>
    <string name="navReadTitle">Read Books</string>
    <string name="navReadingTitle">Reading Books</string>
    <string name="navWillReadTitle">Will Read Books</string>
    <string name="navAccountSetTitle">Account settings</string>
    <string name="navStatisticsTitle">Statistics</string>
    <string name="editTextLogEmail">Email</string>
    <string name="textViewAlreadyRegistered">Already have an account?</string>
    <string name="textViewSignIn">Sign in</string>
    <string name="textView2">Enter your e-mail or login:</string>
    <string name="editTextRecEmail">E-mail/login</string>
    <string name="buttonRecNext">NEXT</string>
    <string name="editTextRegEmail">E-mail</string>
    <string name="editTextRegPassword">Password</string>
    <string name="editTextRegConfirmPassword">Confrim password</string>
    <string name="buttonRegSignUp">Sign up</string>
    <string name="textViewProfileEmail">Create your account:</string>
    <string name="textViewNewUser">New user name</string>
    <string name="editTextNewUsername">Username</string>
    <string name="buttonChangeUsername">Change</string>
    <string name="textViewNewPassword">New password:</string>
    <string name="textViewConfirmPass">Confirm password:</string>
    <string name="changePassButton">Confirm</string>
    <string name="textlabelEditNote">Edit or delete your note to the book</string>
    <string name="editAddNoteEdit">Enter new note...</string>
    <string name="buttonDeleteNote">Delete</string>
    <string name="buttonEditNote">Edit</string>
    <string name="editTitleEdit">Enter new title</string>
    <string name="textlabelAddNote">Write a note to the book</string>
    <string name="editTitle">Enter title</string>
    <string name="buttonAddNotice">Add note</string>
    <string name="editAddNote">Enter your note(max length 200 symbols)</string>
    <string name="buttonAddReview">Add review</string>
    <string name="editAddReview">Enter your review(max length 200 symbols)</string>
    <string name="textlabelAddReview">Write a review about this book</string>
    <string name="textSimilarBooks">Similar books</string>
    <string name="buttonOpenAddNoticePage">Add note</string>
    <string name="textView13">All notices</string>
    <string name="textView11">All reviews</string>
    <string name="buttonOpenAddReviewPage">Add</string>
    <string name="textViewFragTitle">Access recovery guide has been sent to your email</string>
    <string name="buttonRecFragGotIt">Got it</string>
    <string name="textView28">Account has been created. You can sign in using your e-mail and password</string>
    <string name="textView5">I want to read</string>
    <string name="textView6">books a week</string>
    <string name="textView8">books a month</string>
    <string name="textView10">books a year</string>
    <string name="button3">Save</string>
    <string name="buttonChangeUsernameSet">Change user name</string>
    <string name="buttonChangePassword">Change password</string>
    <string name="buttonSetTargets">Set reading targets</string>
    <string name="buttonSwitchLanguage">Switch to Ukrainian</string>
    <string name="buttonLogout">Logout</string>
    <string name="wrongRes">Something went wrong, try again</string>
    <string name="buttonChangeAvatarSet">Change user avatar</string>
    <string name="noteDate">Date: </string>
    <string name="checking">Checking...</string>
    <string name="cancel">Cancel</string>
    <string name="existUser">User with this e-mail already exists</string>
    <string name="invalidMail">Invalid e-mail, try again</string>
    <string name="invalidPass">Passwords aren\'t the same, try again</string>
    <string name="passLength">Password must be at least 6 characters long</string>
    <string name="wrongUser">User with this email doesn\'t exist</string>
    <string name="googleSignIn">Sign in with Google</string>
    <string name="wrongPass">Wrong password</string>
    <string name="btnfr6">Year</string>
    <string name="btnfr7">Month</string>
    <string name="cLogin">Your user name was changed</string>
    <string name="cPass">Your password was changed</string>
    <string name="cAvatar">Your avatar was changed</string>
    <string name="nullImage">You did not choose user image</string>
    <string name="positiveNumber">This field must be a positive number</string>
    <string name="logout">Are you sure you want to Logout?</string>
    <string name="cTargets">Your targets name was changed</string>
    <string name="fillField">You must fill all fields</string>
    <string name="btnfr8">Week</string>
    <string name="bookPage">Book Page</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="deleteBook">Book has been deleted</string>
    <string name="statusToRead">The status of book was changed on read</string>
    <string name="statusToReading">The status of book was changed on reading</string>
    <string name="statusToWillRead">The status of book was changed on will read</string>
    <string name="imageWasChosen">Image was chosen</string>
    <string name="deleteBookorNo">Are you sure you want to delete this book?</string>
    <string name="bookWasDeleted">The book was deleted</string>
    <string name="connectionFailed">Connection failed</string>
    <string name="loginHelp">Username can only contain latin letters, digits or underscores</string>
    <string name="commit">Are you sure, you want to delete this note?</string>
    <string name="bookRead">Read</string>
    <string name="bookReading">Reading</string>
    <string name="bookWillRead">Will Read</string>
    <string name="bookChoose">Choose status:</string>
    <string name="bookSelected">Selected status: </string>
    <string name="topButton">Top</string>
    <string name="Recom">Recommendations</string>
    <string name="booksRead">Books read:</string>
    <string name="favoriteGenre">Favorite genre:</string>
    <string name="favoriteAuthor">Favorite author:</string>
    <string name="plan">Plan:</string>
    <string name="statisticMonth">Statistics for the month:</string>
    <string name="wantToRead">Want to read:</string>
    <string name="books">books</string>
    <string name="read">Read:</string>
    <string name="booksOutOf">booksOutOf</string>
    <string name="completed">Completed:</string>
    <string name="statisticWeek">Statistics for the week:</string>
    <string name="statisticYear">Statistics for the year:</string>
    <string name="editTextLogPassword">Password</string>
    <string name="buttonLogSignIn">SIGN IN</string>
    <string name="textViewLogForgot">Forgot your password?</string>
    <string name="textView3">Login:</string>
    <string name="tagline">Reading opens new boundaries</string>
    <string name="buttonSignUp">CREATE ACCOUNT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editDeleteNoteTitle">Edit note</string>
    <string name="textViewEditNoteTitle">Title:</string>
    <string name="textViewEditNoteText">Note:</string>
</resources>
