<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/app"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/group1">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/navHomeTitle" />


        <item
            android:id="@+id/nav_read"
            android:icon="@drawable/ic_bookmark_black_24dp"
            android:title="@string/navReadTitle"
            app2:actionViewClass="android.widget.TextView" />


        <item
            android:id="@+id/nav_reading"
            android:icon="@drawable/ic_bookmark_black_"
            android:title="@string/navReadingTitle"
            app2:actionViewClass="android.widget.TextView" />

        <item
            android:id="@+id/nav_willread"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/navWillReadTitle"
            app2:actionViewClass="android.widget.TextView" />


        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navAccountSetTitle" />


        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/navStatistics" />

    </group>

</menu>
