<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="@color/colorSplashScreen">

    <TextView
        android:id="@+id/textViewAvatar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/textViewAvatar"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp" />


    <Button
        android:id="@+id/buttonUploadPhoto"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="8dp"

        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-light"
        android:onClick="onClickUpload"
        android:text="@string/buttonUploadPhoto"
        android:textColor=" #2e4053 "
        android:textSize="14sp"
        android:textStyle="bold"
        tools:targetApi="ice_cream_sandwich" />

    <Button
        android:id="@+id/buttonChangeAvatar"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="8dp"

        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-light"
        android:onClick="onShowAvatar"
        android:text="@string/buttonChangeAvatar"
        android:textColor=" #2e4053 "
        android:textSize="14sp"
        android:textStyle="bold"
        tools:targetApi="ice_cream_sandwich" />

</LinearLayout>