<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSplashScreen"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/LogoMain"
        android:layout_width="218dp"
        android:layout_height="164dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/TaglineMain"
        android:layout_width="290dp"
        android:layout_height="77dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/roboto_light"
        android:lineSpacingExtra="5sp"
        android:text="@string/tagline"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/colorTextPrimary"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoMain" />

    <Button
        android:id="@+id/buttonCreateAccount"
        style="@android:style/Widget.Button"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_button"
        android:elevation="0dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/buttonSignUp"
        android:textAllCaps="true"
        android:textColor=" #2e4053 "
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TaglineMain" />

    <TextView
        android:id="@+id/textViewAlreadyRegistered"
        android:layout_width="234dp"
        android:layout_height="33dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/textViewAlreadyRegistered"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="80dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/textViewSignIn"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewAlreadyRegistered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewAlreadyRegistered" />
</android.support.constraint.ConstraintLayout>